# risk_assessment_list

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
reference/: 001168179.xlsx  001474394.xlsx  johas_step_list.html  list_nite_all.xlsx  manifest.json  reviewed_synonyms.csv
scripts/: build_db.py  build_synonyms_db.py  fetch_reference.py
src/risk_assessment_list/: __init__.py  api.py  db.py  ghs.py  models.py  normalize.py  synonym_database.py  synonym_seeds.py  synonyms.py
src/risk_assessment_list/_build/: builder.py  config.py  fetch.py  synonym_export.py
src/risk_assessment_list/_runtime/: __init__.py  assessment.py  library.py  search.py  store.py
tests/: test_api.py  test_entrypoints.py  test_fetch_reference.py  test_schema.py  test_synonym_database.py
