[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-assessment-list"
version = "0.1.0"
description = "Determine Japanese chemical risk assessment obligations and GHS hazard notices."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rapidfuzz>=3.14,<4",
]

[project.optional-dependencies]
build = [
    "openpyxl>=3.1.5,<4",
]
test = [
    "pytest>=8.4,<9",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3,<5",
    "ruff>=0.12,<0.13",
    "ty>=0.0.1a17,<0.0.2",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]

[tool.ty.src]
include = ["src", "scripts", "tests", "main.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
risk_assessment_list = ["data/*.sqlite3", "py.typed"]
